# recipe_api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
apps/recipes/: models.py  sample.json  serializers.py  urls.py  views.py
apps/recipes/migrations/: 0001_initial.py  0002_recipe_author.py
apps/users/: admin.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_remove_user_first_name_remove_user_last_name.py  0004_user_is_admin_alter_user_is_superuser_and_more.py
recipe_api/: production.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
recipe_api/templates/: home.html
recipes/: urls.py  views.py
recipes/migrations/: 0001_initial.py
